fixed validation to display hazard icon for tp and align to left (#333)

--- a/frontend/src/pages/TermPlanner/main.less
+++ b/frontend/src/pages/TermPlanner/main.less
@@ -90,7 +90,7 @@ body {
     min-width: 12em;
     margin-top: 1em;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 0.7em;
     align-items: center;
 
